<resources>
    <string name="app_name">Edirne Yağ Yükleme</string>
    <string name="ping">PING</string>
    <string name="error_service">SERVİS HATASI!</string>
    <string name="product_code">Stok Kodu: </string>
    <string name="product_name">Stok Adı: </string>
    <string name="error_config">Config dosyası okunamadı</string>
    <string name="barcode_read">Barkod okundu</string>
    <string name="error">Hata :</string>
    <string name="delivery">Yükleme Listesi</string>
    <string name="read">Oku</string>
    <string name="start">Başlat</string>
    <string name="finish">Bitir</string>
    <string name="delivery_no">Yükleme No:</string>
    <string name="status_ready">Yüklemeye Hazır</string>
    <string name="status_process">Yükleniyor</string>
    <string name="status_finish">Yükleme Bitti</string>
    <string name="ok">Ok</string>
    <string name="list_count_order">Sayım Emirleri Listeleniyor</string>
    <string name="status">Durum:</string>
    <string name="counted_quantity">Sayılan:</string>
    <string name="update">Güncelle</string>
    <string name="open">Aç/Kapat</string>
    <string name="start_delivery">Yükleme başlatılıyor</string>
    <string name="finish_delivery">Yükleme bitirildi, çıkış hareketi oluşturuldu.</string>
    <string name="update_order">Sayım emri güncelleniyor</string>
    <string name="password">Parola</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="login">Bağlan</string>
    <string name="cancel">Vazgeç</string>
    <string name="error_credential">Kimlik doğrulanamadı</string>
    <string name="delivery_date">Teslim Tarihi:</string>
    <string name="quantity">Miktar:</string>
    <string name="date">Tarih:</string>
    <string name="error_finish">Sadece başlatılmış yükleme listesi bitirilebilir.</string>
    <string name="error_select_delivery">Lütfen bir yükleme listesi seçiniz.</string>
    <string name="exit">Programı Kapat</string>
    <string name="yes">evet</string>
    <string name="is_delivery_start">Yükleme başlatılacak. Onaylıyor musunuz?</string>
    <string name="is_delivery_finish">Yükleme listesi bitirilecek. Onaylıyor musunuz?</string>
    <string name="logout_user">Çıkış yapılacak.</string>
    <string name="documentNo">Evrak No</string>
    <string name="undo">Geri Al</string>
    <string name="is_delivery_undo">Yükleme ilk haline getirilecek. Onaylıyor musunuz?</string>
    <string name="undo_delivery">Geri alındı.</string>
    <string name="waybill_no">İrsaliye No:</string>
    <string name="no">Hayır</string>
    <string name="select_row">Satırı seç !</string>
    <string name="error_counting">Sayım miktarı yükleme miktarından büyük olamaz.</string>
    <string name="serial_no">Parti No:</string>
    <string name="order_creator_user">Siparişi Oluşturan:</string>
    <string name="couldnot_find_pallet">Palet bulunamadı.</string>
    <string name="couldnot_find_pallet_delivery">Yükleme listesinde bu palet bulunamadı.</string>
    <string name="delivery_quantity">Yük. Mik.</string>
    <string name="add">Ekle</string>
    <string name="fix">Düzelt</string>
    <string name="process">İşlem</string>
    <string name="customer_code">Müşteri Kodu</string>
    <string name="customer_title">Müşteri Ünvan</string>
    <string name="piece">Adet</string>
    <string name="pallet">Palet Gir</string>
    <string name="pallet_delete">Palet Sil</string>
    <string name="pallet_no">Palet No:</string>
    <string name="clear">Temizle</string>
    <string name="delete">Sil</string>
    <string name="delete_selected_pallet">numaralı palet silinecek. Onaylıyor musunuz?</string>
    <string name="logout">Çıkış</string>
    <string name="barcode">Barkod No</string>
    <string name="clear_screen">Ekran temizlenecek. Onaylıyor musunuz?</string>
    <string name="document_no">Evrak No</string>
    <string name="select">Seç</string>
    <string name="select_document">Evrak Türü Seçiniz</string>
    <string-array name="dropdown_items_document_types">
        <item>Yükleme Listesi</item>
        <item>Hediye Fişi</item>
        <item>İç Kullanım Fişi</item>
        <item>Perakende Satış</item>
    </string-array>
</resources>