<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/txtDeliveryNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:padding="4dp"
            android:text="@string/delivery"></Button>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:text="@string/start"></Button>
        <Button
            android:id="@+id/btnUndo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:text="@string/undo"></Button>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:text="@string/finish"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>
</LinearLayout>