<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border">
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="-10sp"
        android:src="@drawable/close2"></ImageButton>
    <HorizontalScrollView
        android:id="@+id/real_horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bg"
                android:layout_margin="1sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDeliveryNo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/delivery_no"/>

                <TextView
                    android:id="@+id/lblStatus"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/status"/>

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/date"/>

                <TextView
                    android:id="@+id/lblDeliveryDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/delivery_date"/>
            </LinearLayout>
            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewDelivery"
                    android:layout_width="match_parent"
                    android:padding="1sp"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>