<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border">
    <ImageButton
        android:id="@+id/btnClosePallet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_margin="-10sp"
        android:src="@drawable/baseline_check_24"></ImageButton>
    <HorizontalScrollView
        android:id="@+id/real_horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bg"
                android:layout_margin="1sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCustomerCode"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/customer_code"/>

                <TextView
                    android:id="@+id/lblCustomerTitle"
                    android:layout_width="0dp"
                    android:layout_weight="65"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/customer_title"/>

                <TextView
                    android:id="@+id/lblPaletQuantity"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:background="#1234"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/piece"/>
            </LinearLayout>
            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewPalet"
                    android:layout_width="match_parent"
                    android:padding="1sp"
                    android:layout_height="match_parent" />
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>